# hold-core

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libholdconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  hold.sln  hold_config.h  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
ci/: test_run_all.sh
contrib/: README.md  filter-lcov.py  gitian-build.py  hold-cli.bash-completion  hold-qt.pro  hold-tx.bash-completion  holdd.bash-completion  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  hold-conf.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  hold-cli.1  hold-qt.1  hold-tx.1  hold-wallet.1  holdd.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  (+151 more)
(+1053 files in other folders)
