dist_man1_MANS=

if BUILD_HOLDD
  dist_man1_MANS+=holdd.1
endif

if ENABLE_QT
  dist_man1_MANS+=hold-qt.1
endif

if BUILD_HOLD_CLI
  dist_man1_MANS+=hold-cli.1
endif

if BUILD_HOLD_TX
  dist_man1_MANS+=hold-tx.1
endif

if ENABLE_WALLET
if BUILD_HOLD_WALLET
  dist_man1_MANS+=hold-wallet.1
endif
endif
